--- a/src/app/templates/src/index.html
+++ b/src/app/templates/src/index.html
@@ -10,7 +10,7 @@
     <div id="root" style="height: 100%"></div>
     <script data-ui5-config type="application/json">
       {
-        "theme": "sap_fiori_3"
+        "theme": "sap_horizon"
       }
     </script>
     <script type="module" src="./index.tsx"></script>
