--- a/src/app/templates/ui5/flpSandbox.html
+++ b/src/app/templates/ui5/flpSandbox.html
@@ -65,7 +65,7 @@
       data-sap-ui-libs="sap.ui.core,sap.ushell"
       data-sap-ui-async="true"
       data-sap-ui-preload="async"
-      data-sap-ui-theme="sap_fiori_3"
+      data-sap-ui-theme="sap_horizon"
       data-sap-ui-compatVersion="edge"
       data-sap-ui-language="de"
       data-sap-ui-resourceroots='{"<%= appId %>": "./"}'
