--- a/src/app/templates/ui5/standalone.html
+++ b/src/app/templates/ui5/standalone.html
@@ -9,7 +9,7 @@
     <script
       id="sap-ui-bootstrap"
       src="resources/sap-ui-core.js"
-      data-sap-ui-theme="sap_fiori_3"
+      data-sap-ui-theme="sap_horizon"
       data-sap-ui-resourceroots='{"<%= appId %>": "./"}'
       data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
       data-sap-ui-compatversion="edge"
