feat: update to web components 2.5 and adapt to that

--- a/src/app/templates/src/domain/demo/TestScreen.module.scss
+++ b/src/app/templates/src/domain/demo/TestScreen.module.scss
@@ -1,7 +1,9 @@
 @use "../../style/base";
 
 .myTitle {
-  color: green;
-  margin: base.$sap-margin-large;
+  background-color: darkcyan;
+  color: darkgoldenrod;
+  margin-top: base.$sap-margin-medium;
+  padding: base.$sap-padding-large;
 }
 
